// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`node should add custom class 1`] = `
<li
  className="indent-0 no-open-button selectable custom-class"
  data-id="0"
>
  <i
    className="fa fa-square-o icon checkbox-button"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  />
  <i
    className="icon fa fa-ban fa-fw"
    style={Object {}}
  />
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "Rendered Node",
      }
    }
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  />
</li>
`;

exports[`node should color the node icon with hex color 1`] = `
<li
  className="indent-0 no-open-button selectable"
  data-id="0"
>
  <i
    className="fa fa-square-o icon checkbox-button"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  />
  <i
    className="icon fa fa-circle"
    style={
      Object {
        "color": "#F5F5F5",
      }
    }
  />
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "Rendered Node",
      }
    }
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  />
</li>
`;

exports[`node should display custom icon 1`] = `
<li
  className="indent-0 no-open-button selectable"
  data-id="0"
>
  <i
    className="icon fa fa-custom-icon"
    style={Object {}}
  />
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "Rendered Node",
      }
    }
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  />
</li>
`;

exports[`node should display custom image as icon 1`] = `
<li
  className="indent-0 no-open-button selectable"
  data-id="0"
>
  <img
    className="icon image"
    src="https://www.wpsuperstars.net/wp-content/uploads/2015/01/59.png"
  />
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "Rendered Node",
      }
    }
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  />
</li>
`;

exports[`node should display error lazy loading icon 1`] = `
<li
  className="indent-0 selectable"
  data-id="0"
>
  <i
    className="fa-exclamation-triangle icon expand-button"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  />
  <i
    className="fa fa-square-o icon checkbox-button"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  />
  <i
    className="icon fa fa-ban fa-fw"
    style={Object {}}
  />
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "Rendered Node",
      }
    }
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  />
</li>
`;

exports[`node should display loading icon 1`] = `
<li
  className="indent-0 selectable"
  data-id="0"
>
  <i
    className="fa fa-spinner fa-spin icon expand-button"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  />
  <i
    className="fa fa-square-o icon checkbox-button"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  />
  <i
    className="icon fa fa-ban fa-fw"
    style={Object {}}
  />
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "Rendered Node",
      }
    }
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  />
</li>
`;

exports[`node should display partially checked icon 1`] = `
<li
  className="indent-0 no-open-button selectable"
  data-id="0"
>
  <i
    className="fa fa-square icon checkbox-button"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  />
  <i
    className="icon fa fa-ban fa-fw"
    style={Object {}}
  />
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "Rendered Node",
      }
    }
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  />
</li>
`;

exports[`node should display unique selected icon 1`] = `
<li
  className="indent-0 no-open-button selectable selected"
  data-id="0"
>
  <i
    className="fa fa-square-o icon checkbox-button"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  />
  <i
    className="icon icon-selected"
  />
  <i
    className="icon fa fa-ban fa-fw"
    style={Object {}}
  />
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "Rendered Node",
      }
    }
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  />
</li>
`;

exports[`node should display warning icon when undefined 1`] = `
<li
  className="indent-0 no-open-button selectable"
  data-id="0"
>
  <i
    className="fa fa-question-circle icon checkbox-button"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  />
  <i
    className="icon fa fa-ban fa-fw"
    style={Object {}}
  />
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "Rendered Node",
      }
    }
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  />
</li>
`;

exports[`node should indicate changed checked node (icon and class) 1`] = `
<li
  className="indent-0 no-open-button selectable changed-checkbox"
  data-id="0"
>
  <i
    className="fa fa-check-square icon checkbox-button"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  />
  <i
    className="icon fa fa-ban fa-fw"
    style={Object {}}
  />
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "Rendered Node",
      }
    }
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  />
</li>
`;

exports[`node should indicate selected node (icon and class) 1`] = `
<li
  className="indent-0 no-open-button selectable selected"
  data-id="0"
>
  <i
    className="fa fa-square-o icon checkbox-button"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  />
  <i
    className="fa fa-check"
  />
  <i
    className="icon fa fa-ban fa-fw"
    style={Object {}}
  />
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "Rendered Node",
      }
    }
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  />
</li>
`;

exports[`node should not display any icon (checkbox, icon, expand icon) 1`] = `
<li
  className="indent-0 no-open-button selectable"
  data-id="0"
>
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "Rendered Node",
      }
    }
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  />
</li>
`;

exports[`node should not render children nodes if collapsed 1`] = `
<li
  className="indent-0 selectable"
  data-id="0"
>
  <i
    className="fa fa-angle-right icon expand-button"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  />
  <i
    className="fa fa-square-o icon checkbox-button"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  />
  <i
    className="icon fa fa-ban fa-fw"
    style={Object {}}
  />
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "Rendered Node",
      }
    }
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  />
</li>
`;

exports[`node should not render empty children 1`] = `
<li
  className="indent-0 no-open-button selectable"
  data-id="0"
>
  <i
    className="fa fa-square-o icon checkbox-button"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  />
  <i
    className="icon fa fa-ban fa-fw"
    style={Object {}}
  />
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "Rendered Node",
      }
    }
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  />
</li>
`;

exports[`node should recolor both node icon ad icon background with color names 1`] = `
<li
  className="indent-0 no-open-button selectable"
  data-id="0"
>
  <i
    className="fa fa-square-o icon checkbox-button"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  />
  <i
    className="icon fa fa-circle"
    style={
      Object {
        "backgroundColor": "green",
        "color": "red",
      }
    }
  />
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "Rendered Node",
      }
    }
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  />
</li>
`;

exports[`node should recolor the default icon color and background with rgba colors 1`] = `
<li
  className="indent-0 no-open-button selectable"
  data-id="0"
>
  <i
    className="fa fa-square-o icon checkbox-button"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  />
  <i
    className="icon fa fa-ban fa-fw"
    style={
      Object {
        "backgroundColor": "rgba(90,60,90,1)",
        "color": "rgba(10,10,10,0.5)",
      }
    }
  />
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "Rendered Node",
      }
    }
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  />
</li>
`;

exports[`node should recolor the node icon background with rgb color 1`] = `
<li
  className="indent-0 no-open-button selectable"
  data-id="0"
>
  <i
    className="fa fa-square-o icon checkbox-button"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  />
  <i
    className="icon fa fa-circle"
    style={
      Object {
        "backgroundColor": "rgb(100,255,100)",
      }
    }
  />
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "Rendered Node",
      }
    }
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  />
</li>
`;

exports[`node should render basic node 1`] = `
<li
  className="indent-0 no-open-button selectable"
  data-id="0"
>
  <i
    className="fa fa-square-o icon checkbox-button"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  />
  <i
    className="icon fa fa-ban fa-fw"
    style={Object {}}
  />
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "Rendered Node",
      }
    }
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  />
</li>
`;

exports[`node should render children nodes if expanded 1`] = `
Array [
  <li
    className="indent-0 selectable"
    data-id="0"
>
    <i
        className="fa fa-angle-down icon expand-button"
        onClick={[Function]}
        onKeyPress={[Function]}
        tabIndex={0}
    />
    <i
        className="fa fa-square-o icon checkbox-button"
        onClick={[Function]}
        onKeyPress={[Function]}
        tabIndex={0}
    />
    <i
        className="icon fa fa-ban fa-fw"
        style={Object {}}
    />
    <span
        dangerouslySetInnerHTML={
            Object {
                "__html": "Rendered Node",
              }
        }
        onClick={[Function]}
        onKeyPress={[Function]}
        tabIndex={0}
    />
</li>,
  <li
    className="indent-1 no-open-button selectable"
    data-id="0.0"
>
    <i
        className="fa fa-square-o icon checkbox-button"
        onClick={[Function]}
        onKeyPress={[Function]}
        tabIndex={0}
    />
    <i
        className="icon fa fa-ban fa-fw"
        style={Object {}}
    />
    <span
        dangerouslySetInnerHTML={
            Object {
                "__html": "Sub Node 0",
              }
        }
        onClick={[Function]}
        onKeyPress={[Function]}
        tabIndex={0}
    />
</li>,
  <li
    className="indent-1 no-open-button selectable"
    data-id="0.1"
>
    <i
        className="fa fa-square-o icon checkbox-button"
        onClick={[Function]}
        onKeyPress={[Function]}
        tabIndex={0}
    />
    <i
        className="icon fa fa-ban fa-fw"
        style={Object {}}
    />
    <span
        dangerouslySetInnerHTML={
            Object {
                "__html": "Sub Node 1",
              }
        }
        onClick={[Function]}
        onKeyPress={[Function]}
        tabIndex={0}
    />
</li>,
]
`;

exports[`node should render expanded node with children 1`] = `
Array [
  <li
    className="indent-0 selectable"
    data-id="0"
>
    <i
        className="fa fa-angle-down icon expand-button"
        onClick={[Function]}
        onKeyPress={[Function]}
        tabIndex={0}
    />
    <i
        className="fa fa-square-o icon checkbox-button"
        onClick={[Function]}
        onKeyPress={[Function]}
        tabIndex={0}
    />
    <i
        className="icon fa fa-ban fa-fw"
        style={Object {}}
    />
    <span
        dangerouslySetInnerHTML={
            Object {
                "__html": "Rendered Node",
              }
        }
        onClick={[Function]}
        onKeyPress={[Function]}
        tabIndex={0}
    />
</li>,
  <li
    className="indent-1 no-open-button selectable"
    data-id="0.0"
>
    <i
        className="fa fa-square-o icon checkbox-button"
        onClick={[Function]}
        onKeyPress={[Function]}
        tabIndex={0}
    />
    <i
        className="icon fa fa-ban fa-fw"
        style={Object {}}
    />
    <span
        dangerouslySetInnerHTML={
            Object {
                "__html": "Sub Node 0",
              }
        }
        onClick={[Function]}
        onKeyPress={[Function]}
        tabIndex={0}
    />
</li>,
  <li
    className="indent-1 no-open-button selectable"
    data-id="0.1"
>
    <i
        className="fa fa-square-o icon checkbox-button"
        onClick={[Function]}
        onKeyPress={[Function]}
        tabIndex={0}
    />
    <i
        className="icon fa fa-ban fa-fw"
        style={Object {}}
    />
    <span
        dangerouslySetInnerHTML={
            Object {
                "__html": "Sub Node 1",
              }
        }
        onClick={[Function]}
        onKeyPress={[Function]}
        tabIndex={0}
    />
</li>,
]
`;

exports[`node should render switched node and checkbox icon 1`] = `
<li
  className="indent-0 no-open-button selectable"
  data-id="0"
>
  <i
    className="icon fa fa-ban fa-fw"
    style={Object {}}
  />
  <i
    className="fa fa-square-o icon checkbox-button"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  />
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "Rendered Node",
      }
    }
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  />
</li>
`;
